--- a/cloudseed/deploy/Vagrantfile
+++ b/cloudseed/deploy/Vagrantfile
@@ -11,6 +11,10 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
     # Every Vagrant virtual environment requires a box to build off of.
     config.vm.box = "precise64"
     config.vm.box_url = "http://files.vagrantup.com/precise64.box"
+
+    ## Networking
+    # config.vm.network :forwarded_port, guest: 80, host: 8080, auto_correct: true
+    # config.vm.network :public_network
     
 
     ## For masterless, mount your salt file root
