baked in minion.pem and minion.pub to remove dep on crypto libs. These keys should NEVER be used in a prod env. They are only here for local vagrant dev.

--- a/cloudseed/deploy/Vagrantfile
+++ b/cloudseed/deploy/Vagrantfile
@@ -35,12 +35,10 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
         salt.minion_config = "cloudseed/current/vagrant/minion"
         salt.minion_key = "cloudseed/current/vagrant/minion.pem"
         salt.minion_pub = "cloudseed/current/vagrant/minion.pub"
-        salt.bootstrap_script = "cloudseed/current/vagrant/bootstrap-salt.sh"
-        salt.seed_master = {minion: salt.minion_pub}
+        salt.seed_master = {minion: "cloudseed/current/vagrant/minion.pub"}
         salt.verbose = true
-        salt.install_type = "git"
-        salt.install_args = "v0.17.0"
-        salt.bootstrap_options = "-D -F"
+        salt.install_type = "stable"
+        salt.bootstrap_options = "-F"
     end
 
 end
