--- a/cloudseed/deploy/Vagrantfile
+++ b/cloudseed/deploy/Vagrantfile
@@ -1,6 +1,6 @@
 # -*- mode: ruby -*-
 # vi: set ft=ruby :
-
+{% set version = version | d('stable') %}
 VAGRANTFILE_API_VERSION = "2"
 
 Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
@@ -39,8 +39,15 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
         salt.minion_pub = "cloudseed/current/vagrant/minion.pub"
         salt.seed_master = {minion: "cloudseed/current/vagrant/minion.pub"}
         salt.verbose = true
-        salt.install_type = "stable"
-        salt.bootstrap_options = "-F"
+        
+        {% if version == 'stable' %}
+            salt.install_type = "stable"
+            salt.bootstrap_options = "-F"
+        {% else %}
+            salt.install_type = "git"
+            salt.install_args = "{{ version }}"
+            salt.bootstrap_options = "-D -F"
+        {% endif %}
     end
 
 end
