--- a/cloudseed/deploy/Vagrantfile
+++ b/cloudseed/deploy/Vagrantfile
@@ -39,15 +39,14 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
         salt.minion_pub = "cloudseed/current/vagrant/minion.pub"
         salt.seed_master = {minion: "cloudseed/current/vagrant/minion.pub"}
         salt.verbose = true
-        
-        {% if version == 'stable' %}
-            salt.install_type = "stable"
-            salt.bootstrap_options = "-F"
+        {% if version == 'stable' -%}
+        salt.install_type = "stable"
+        salt.bootstrap_options = "-F"
         {% else %}
-            salt.install_type = "git"
-            salt.install_args = "{{ version }}"
-            salt.bootstrap_options = "-D -F"
-        {% endif %}
+        salt.install_type = "git"
+        salt.install_args = "{{ version }}"
+        salt.bootstrap_options = "-D -F"
+        {% endif -%}
     end
 
 end
