--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -3,5 +3,5 @@ include README.md
 include setup.py
 recursive-include cloudseed *.py
 recursive-include requirements *.txt
-recursive-include cloudseed/deploy *.*
+recursive-include cloudseed/deploy *
 prune *.pyc
