--- a/cloudseed/deploy/Vagrantfile
+++ b/cloudseed/deploy/Vagrantfile
@@ -18,6 +18,7 @@ Vagrant.configure("2") do |config|
     config.vm.provision :salt do |salt|
         salt.run_highstate = true
         salt.install_master = true
+        salt.always_install = true
         salt.master_config = "cloudseed/current/salt/master"
         salt.minion_config = "cloudseed/current/vagrant/minion"
         salt.minion_key = "cloudseed/current/vagrant/minion.pem"
