--- a/cloudseed/deploy/Vagrantfile
+++ b/cloudseed/deploy/Vagrantfile
@@ -2,7 +2,7 @@
 # vi: set ft=ruby :
 {% set version = version | d('stable') %}
 VAGRANTFILE_API_VERSION = "2"
-
+Vagrant.require_version ">= 1.3.5"
 Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
 
     ## Box
